--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
@@ -6,4 +6,9 @@ body {
 
 main {
     flex: 1 0 auto;
-}
+} */
+
+/* ion-icon {
+    font-size: 100%;
+    color: brown !important;
+} */
