--- a/client/src/style/otherPage.css
+++ b/client/src/style/otherPage.css
@@ -1,4 +1,4 @@
-.row > div > div {
+/* .row > div > div {
     margin: 15px;
     padding: 10px;
 }
@@ -7,4 +7,4 @@
 }
 .text-content > p {
     text-align: justify;
-}
+} */
